<resources>
    <string name="app_name">Appointment Application</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="desc_add">desc_add</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hint_fullname">Full Name</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="patient_login_panel">Login as Patient</string>
    <string name="patient_login_text_1">Not registered yet?</string>
    <string name="patient_login_text_2">Register here</string>
    <string name="hint_email_address">Email Address</string>
    <string name="doctor_login_panel">Login as Doctor</string>
    <string name="patient_sign_up_text_1">Already have an account?</string>
    <string name="patient_sign_up_text_2">Login here</string>
    <string name="doctor_sign_in_text_1">Not a doctor?</string>
    <string name="doctor_sign_in_text_2">Login here</string>
    <string name="patient_register_panel">Register as Patient</string>
    <string name="hint_gender">Patient\'s Gender</string>
    <string name="hint_address">Patient\'s Home Address</string>
    <string name="hint_age">Patient\'s Age (yrs old)</string>
    <string name="btn_register">Register</string>
    <string name="doctor_prompt_text">Are you a doctor?</string>
    <string name="hint_contact_number">Contact Number</string>
    <string name="hint_specialty">Specialty</string>
    <string name="action_logout">Log Out</string>
    <string name="title_activity_patient_panel">ScrollingActivity</string>
    <string name="template_patient_name">Patient\'s Name</string>
    <string name="template_patient_schedule">Schedule</string>
    <string name="template_patient_status">Status</string>
    <string name="template_patient_gender">Gender</string>
    <string name="template_positive_button">Positive Button</string>
    <string name="template_negative_button">Negative Button</string>
    <string name="template_neutral_button">Neutral Button</string>

    <!-- FCM Related Strings -->
    <string name="fcm_token_key">%s</string>
    <string name="fcm_message">@string/app_name</string>
    <string name="default_notification_channel_id">stub</string>
    <string name="temp_pending">Pending</string>
    <string name="temp_declined">Declined</string>
    <string name="temp_approved">Approved</string>
    <string name="temp_canceled">Canceled</string>

    <!-- ignore -->
    <string name="cdata_patient_no_schedule">You have no scheduled appointments. \nTo create one, click the \'+\' button below.</string>
    <string name="dev_github_account" formatted="false">https://github.com/SnoopyCodeX</string>
    <string name="text_hint_medical_field">Select a medical field</string>
    <string name="text_title_schedule_appointment">Schedule Appointment</string>
    <string name="btn_text_next_confirm">%s</string>
    <string name="text_hint_doctor">Select a doctor</string>
    <string name="text_hint_patient_identity">Select patient identity</string>
    <string name="radio_choice_myself">Myself</string>
    <string name="radio_choice_other">Other</string>
    <string name="text_hint_patient_name">Enter patient\'s full name</string>
    <string name="hint_full_name">Patient\'s full name</string>
    <string name="radio_choice_lgbtqp">LGBTQ+</string>
    <string name="radio_choice_female">Female</string>
    <string name="radio_choice_male">Male</string>
    <string name="text_hint_patient_gender">Select patient\'s gender</string>
    <string name="text_hint_patient_age">Enter patient\'s age</string>
    <string name="text_hint_patient_reason">Specify reason of appointment</string>
    <string name="hint_patient_reason">Reason of appointment</string>
    <string name="text_hint_date">Date of appointment</string>
    <string name="text_hint_time">Time of appointment</string>
    <string name="text_hint_preview">Preview your appointment</string>
    <string name="text_hint_patient_address">Enter patient\'s home address</string>
    <string name="cdata_doctor_no_schedule">You have no scheduled appointments</string>
    <string name="cdata_doctor_no_pending_schedule">You have no pending appointments</string>
    <string name="text_medical_field">Medical Field</string>
    <string name="text_doctor">Doctor\'s Name</string>
    <string name="text_patient">Patient\'s Identity</string>
    <string name="text_patient_name">Patient\'s Name</string>
    <string name="text_gender">Patient\'s Gender</string>
    <string name="text_age">Patient\'s Age</string>
    <string name="text_reason">Reason of Appointment</string>
    <string name="text_date">Date of Appointment</string>
    <string name="text_address">Home Address</string>
    <string name="text_title_edit_appointment">Edit Appointment</string>
    <string name="text_patient_identity">Patient\'s Identity</string>
    <string name="text_patient_gender">Patient\'s Gender</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="admin_login_panel">Login as Admin</string>
    <string name="template_doctor_name">Doctor\'s Name</string>
    <string name="template_doctor_gender">Gender</string>
    <string name="template_doctor_schedule">Schedule</string>
    <string name="template_doctor_specialty">Specialty</string>
    <string name="hint_doctor_full_name">Full Name</string>
    <string name="hint_doctor_number">Contact Number</string>
    <string name="hint_doctor_email_address">Email Address</string>
    <string name="hint_doctor_room_number">Room Number</string>
    <string name="hint_doctor_schedule">Schedule</string>
    <string name="hint_doctor_time">Time</string>
    <string name="hint_doctor_text_patient_gender">Gender</string>
    <string name="hint_doctor_text_medical_field">Specialty</string>
    <string name="text_title_edit_doctor">Edit Details</string>
    <string name="cdata_no_doctors">No records to display.\nTo create one, just click the \'+\' button below.</string>
    <string name="text_title_create_doctor">Create New Doctor</string>
    <string name="or">OR</string>
    <string name="admin_prompt_text">Are you an admin?</string>
    <string name="admin_sign_in_text">Login here</string>
    <string name="action_change_password">Change Password</string>
    <string name="text_title_change_password">Change Password</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_new_password">New Password</string>
</resources>