<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    app:cardElevation="3dp"
    app:cardCornerRadius="8dp"
    app:cardBackgroundColor="@color/white"
    app:cardUseCompatPadding="false"
    app:cardPreventCornerOverlap="true"
    tools:context=".activity.DoctorPanelActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/doctor_parent"
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:orientation="horizontal"
            android:padding="3dp"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/doctor_profile"
                android:layout_width="70dp"
                android:layout_height="80dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/desc_add"
                android:scaleType="centerInside"
                android:src="@drawable/doctor_male"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/doctor_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/template_doctor_name"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:fontFamily="@font/roboto_regular"/>

                <TextView
                    android:id="@+id/doctor_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/template_doctor_gender"
                    android:textColor="@color/black"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:fontFamily="@font/roboto_regular"/>

                <TextView
                    android:id="@+id/doctor_schedule"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/template_doctor_schedule"
                    android:textColor="@color/black"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:fontFamily="@font/roboto_regular"/>

                <TextView
                    android:id="@+id/doctor_specialty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/template_doctor_specialty"
                    android:textColor="@color/black"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:fontFamily="@font/roboto_regular"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/doctor_btn_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <info.androidhive.fontawesome.FontTextView
                android:id="@+id/doctor_btn_neutral"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/fa_edit_solid"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/white"
                android:background="@color/infoColor"
                app:solid_icon="true"/>

            <info.androidhive.fontawesome.FontTextView
                android:id="@+id/doctor_btn_negative"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/fa_trash_solid"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/white"
                android:background="@color/errorColor"
                app:solid_icon="true"/>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>