<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientPanelActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.AppointmentApplication.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/Theme.AppointmentApplication.PopupOverlay"
                app:titleTextAppearance="?android:textAppearanceSmall"/>

        </com.google.android.material.appbar.AppBarLayout>

        <jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout
            android:id="@+id/refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <include layout="@layout/content_scrolling" />

                <LinearLayout
                    android:id="@+id/parent_no_schedule"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:visibility="visible">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="5dp"
                        android:alpha="0.4"
                        android:scaleType="centerInside"
                        android:src="@drawable/no_schedule"
                        android:contentDescription="@string/app_name"
                        app:tint="#11A31F"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:alpha="0.4"
                        android:text="@string/cdata_patient_no_schedule"
                        android:textColor="#11A31F"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:fontFamily="@font/poppins_light"/>

                </LinearLayout>

            </LinearLayout>

        </jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/desc_add"
        android:layout_gravity="bottom|right"
        app:fabSize="auto"
        app:srcCompat="@android:drawable/ic_input_add"
        app:rippleColor="@color/white"
        app:backgroundTint="#22D533"
        app:tint="@color/white"
        tools:ignore="RtlHardcoded" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>