<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    android:layout_gravity="center"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:clickable="true"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="6dp"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/patient_login_panel"
            android:textColor="#16AA24"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_login_patient_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_email_address"
            android:fontFamily="@font/roboto_regular"
            app:errorEnabled="true"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:endIconMode="custom"
            app:endIconDrawable="@android:drawable/ic_lock_lock"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:padding="10dp"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:imeOptions="actionNext"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_login_patient_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/roboto_regular"
            app:errorEnabled="true"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:padding="10dp"
                android:inputType="textPassword"
                android:singleLine="true"
                android:imeOptions="actionDone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/btn_login_patient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            app:mrl_rippleOverlay="true"
            app:mrl_rippleColor="@color/white"
            app:mrl_rippleAlpha="0.1"
            app:mrl_rippleDimension="10dp"
            app:mrl_rippleHover="true"
            app:mrl_rippleRoundedCorners="6dp"
            app:mrl_rippleInAdapter="false"
            app:mrl_rippleDuration="350"
            app:mrl_rippleFadeDuration="75"
            app:mrl_rippleDelayClick="true"
            app:mrl_rippleBackground="@color/white"
            app:mrl_ripplePersistent="true">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/btn_login"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_light"
                android:background="@drawable/btn_success_selector"/>

        </com.balysv.materialripple.MaterialRippleLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>